--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,28 @@
+name: Run Server
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  run-server-job:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'  # Specify the Node.js version you need
+
+    - name: Install dependencies
+      run: |
+        npm install
+
+    - name: Run server
+      run: |
+        node vps_test/server.js
 
