--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        npm install
+        npm install express
+        npm install ws 
+        npm install node-pty
 
     - name: Run server
       run: |
