--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Setup Node.js 20
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20
+
+      - name: Install Express, node-pty, and ws
+        run: |
+          npm install express node-pty ws
+
+      - name: Run Express server
+        run: |
+          nohup node server.js &
+
       - name: Install Cloudflared
         run: |
           sudo apt-get update
@@ -53,5 +66,3 @@ jobs:
 
       - name: Start Cloudflare Tunnel
         run: cloudflared tunnel run my-tunnel
-
-          
