--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,6 @@ jobs:
         run: |
           npm install express node-pty ws
 
-      - name: Run Express server
-        run: |
-          nohup node server.js &
-
       - name: Install Cloudflared
         run: |
           sudo apt-get update
@@ -35,24 +31,6 @@ jobs:
 
           sudo ufw allow 3000/tcp
           sudo ufw reload
-
-      - name: Authenticate Cloudflared
-        run: cloudflared tunnel login
-        env:
-          CLOUDFLARE_AUTH_TOKEN: ${{ secrets.CLOUDFLARE_AUTH_TOKEN }}
-
-      - name: Create Cloudflare Tunnel
-        run: |
-          cloudflared tunnel create my-tunnel
-          cloudflared tunnel list | grep my-tunnel > tunnel_info.txt
-          TUNNEL_ID=$(awk '{print $1}' tunnel_info.txt)
-          echo "Tunnel ID: $TUNNEL_ID"  # For debugging
-          echo "TUNNEL_ID=$TUNNEL_ID" >> $GITHUB_ENV
-
-      - name: Move Tunnel Credentials
-        run: |
-          sudo mkdir -p /etc/cloudflared
-          sudo mv ~/.cloudflared/${{ env.TUNNEL_ID }}.json /etc/cloudflared/${{ env.TUNNEL_ID }}.json
 
       - name: Retrieve Public IPv4 and IPv6 addresses
         id: get-public-ips
@@ -64,22 +42,8 @@ jobs:
           echo "PUBLIC_IPV4=$IPv4" >> $GITHUB_ENV
           echo "PUBLIC_IPV6=$IPv6" >> $GITHUB_ENV
 
-      - name: Configure Tunnel
+      - name: Run Express server
         run: |
-          echo "tunnel: ${{ env.TUNNEL_ID }}" > config.yml
-          echo "credentials-file: /etc/cloudflared/${{ env.TUNNEL_ID }}.json" >> config.yml
-          echo "ingress:" >> config.yml
-          echo "  - hostname: env.PUBLIC_IPV4" >> config.yml  # Replace with your domain
-          echo "    service: http://localhost:3000" >> config.yml
-          echo "  - service: http_status:404" >> config.yml
-          sudo mv config.yml /etc/cloudflared/
+          nohup node server.js 
 
-      - name: Update Cloudflare DNS with IPv4
-        run: |
-          curl -X POST "https://api.cloudflare.com/client/v4/zones/${{ secrets.CLOUDFLARE_ZONE_ID }}/dns_records" \
-          -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_TOKEN }}" \
-          -H "Content-Type: application/json" \
-          --data '{"type":"A","name":"'"${{ env.PUBLIC_IPV4 }}"'","content":"'"${{ env.TUNNEL_ID }}.cfargotunnel.com"'","proxied":true,"ttl":120}'
-      
-      - name: Start Cloudflare Tunnel
-        run: cloudflared tunnel run my-tunnel
+     
