--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,7 @@ jobs:
 
     - name: Register and Connect Warp
       run: |
-        warp-cli register
-        warp-cli register
+        sudo warp-cli register
         sudo warp-cli connect
 
     - name: Capture Public IPv4
