--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,12 @@ jobs:
     - name: Install node Packages
       run: npm install express node-pty fs ws
 
-    - name: Install Warp client
+    - name: Install Warp client and expect
       run: |
         sudo apt update
         curl https://pkg.cloudflareclient.com/pubkey.gpg | sudo gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg
         echo "deb [arch=amd64 signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ bookworm main" | sudo tee /etc/apt/sources.list.d/cloudflare-client.list
-        sudo apt-get update && sudo apt-get install cloudflare-warp
+        sudo apt-get update && sudo apt-get install -y cloudflare-warp expect
 
     - name: Register and Connect Warp
       run: |
