--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,5 @@ jobs:
         run: |
           npm install express node-pty ws
 
-      - 
+      - name: Running Websocket
+        run: node websocket.js
